<!DOCTYPE resources [
    <!ENTITY nbsp "&#160;">]>
<resources>
    <string name="app_name">FitMe</string>
    <string name="title_activity_main">FitMe</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="daily_goal_popup_label">Daily goal</string>
    <string name="daily_calories_label">Daily calories:</string>
    <string name="cal_hint">cal</string>
    <string name="update_goal_label">Update</string>
    <string name="success_update_msg">Successfuly updated daily goals!</string>
    <string name="error_update_msg">Please fill any empty fields.</string>
    <string name="clear_week_popup_label">Are you sure you want to clear this week\'s data?</string>
    <string name="clear_week_confirm_btn_label">Clear week</string>
    <string name="clear_week_cancel_btn_label">Cancel</string>
    <string name="success_week_clean_up_msg">Successfully cleaned up week.</string>
    <string name="weekly_activity_popup_title_label">Weekly activity</string>
    <string name="weekly_activity_popup_workouts_label">Workouts</string>
    <string name="weekly_activity_popup_steps_label">Average steps</string>
    <string name="success_update_week_activity_msg">Successfuly updated weekly activity!</string>
    <string name="title_activity_settings">Settings</string>

    <string name="week_calories_congrats">Congrats! You hit your weekly calorie goal.</string>
    <string name="week_calories_deficit">You still have some calories remaining for the week.</string>
    <string name="week_calories_surplus">You went over your weekly calorie goal.</string>
    <string name="week_calories_avg_per_day">Average calories per day:&nbsp;</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
