<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/dailyGoalPopupLabel"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="@font/carrois_gothic_sc"
        android:text="@string/daily_goal_popup_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dailyCalPopupLabel"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/daily_calories_label" />

        <EditText
            android:id="@+id/dailyCalInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/cal_hint"
            android:inputType="numberSigned" />
    </LinearLayout>

    <Button
        android:id="@+id/btnUpdateGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="@dimen/fab_margin"
        android:paddingRight="@dimen/fab_margin"
        android:background="@color/colorSuccess"
        android:drawableLeft="@drawable/ic_baseline_done_outline_24px"
        android:text="@string/update_goal_label" />

</LinearLayout>