<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/dailyGoalPopupLabel"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="20dp"
        android:gravity="center"
        android:textStyle="bold"
        android:fontFamily="@font/carrois_gothic"
        android:text="@string/clear_week_popup_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/confirmClearUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorSuccess"
            android:drawableLeft="@drawable/ic_baseline_done_outline_24px"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/clear_week_confirm_btn_label" />

        <Button
            android:id="@+id/cancelClearUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorRed"
            android:drawableLeft="@android:drawable/ic_menu_close_clear_cancel"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/clear_week_cancel_btn_label" />
    </LinearLayout>


</LinearLayout>